fix hero shift on animation line break

--- a/app/styles/utils/_mixins.scss
+++ b/app/styles/utils/_mixins.scss
@@ -4,8 +4,14 @@
   }
 }
 
+@mixin tablet {
+  @media screen and (min-width: $tablet-min) and (max-width: #{$desktop-min - 1px}) {
+    @content;
+  }
+}
+
 @mixin desktop {
-  @media screen and (min-width: $tablet-min) {
+  @media screen and (min-width: $desktop-min) {
     @content;
   }
 }
